--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,6 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-dist/
-tools/
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -236,3 +234,10 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+# Cake
+dist/
+tools/
+
+# StyleCop
+StyleCopViolations.xml
