Use MSBuild.Microsoft.VisualStudio.Web.targets (guess those targets are needed by VS)

--- a/src/Cake.Sample.Web/packages.config
+++ b/src/Cake.Sample.Web/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
+  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net46" />
 </packages>
