--- a/test/Cake.Sample.Lib.Tests/Cake.Sample.Lib.Tests.csproj
+++ b/test/Cake.Sample.Lib.Tests/Cake.Sample.Lib.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cake.Sample.Lib.Tests</RootNamespace>
     <AssemblyName>Cake.Sample.Lib.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
